<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/shapes" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/areas_tv_rectangle_wight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/areas_tv_rectangle_wight"
            android:inputType="numberPassword"
            android:textAllCaps="true"
            android:textColor="#673AB7"
            android:textColorHint="#0E0909"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/areas_tv_rectangle_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/areas_tv_rectangle_height"
            android:inputType="numberPassword"
            android:textAllCaps="true"
            android:textColor="#673AB7"
            android:textColorHint="#0B0808"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <EditText
        android:id="@+id/areas_tv_circle_radios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/areas_tv_circle_radios"
        android:inputType="numberPassword"
        android:textAllCaps="true"
        android:textColor="#1B1822"
        android:textColorHighlight="#1C1111"
        android:textColorHint="#070505"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/areas_tv_trangle_base"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/areas_tv_rectangle_wight"
            android:inputType="numberPassword"
            android:textAllCaps="true"
            android:textColorHint="#100C0C"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/areas_tv_trangle_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/areas_tv_trangle_height"
            android:inputType="numberPassword"
            android:textAllCaps="true"
            android:textColorHint="#0E0B0B"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/areas_bt_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/areas_bt_calculate"
        android:textAllCaps="true"
        android:textColorHint="#130D0D"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#009688"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textStyle="bold" />

</LinearLayout>